[gd_scene load_steps=61 format=3 uid="uid://nglikocn2eac"]

[ext_resource type="Script" path="res://scripts/enemy/electro_dog/electro_dog.gd" id="1_oyqan"]
[ext_resource type="Texture2D" uid="uid://ci6mpjn003p4p" path="res://assets/enemy/ElectroDog/50x31 Monster 2 spritesheet without shadows.png" id="2_ieb2m"]
[ext_resource type="Texture2D" uid="uid://jrouo6ipxsnr" path="res://assets/character/shadow/Shadow.png" id="3_8qpbs"]
[ext_resource type="PackedScene" uid="uid://bf5as2jss0yx5" path="res://scenes/HurtboxComponent.tscn" id="8_ixfwi"]
[ext_resource type="PackedScene" uid="uid://887ht42jta6r" path="res://scenes/HitboxComponent.tscn" id="9_lk1lc"]
[ext_resource type="Script" path="res://scripts/HealthComponent.gd" id="11_3hh0j"]
[ext_resource type="Script" path="res://scripts/EnemyStateMachine.gd" id="12_32cr5"]
[ext_resource type="Script" path="res://scripts/enemy/electro_dog/Follow.gd" id="13_kysns"]
[ext_resource type="Script" path="res://scripts/enemy/electro_dog/Attack.gd" id="14_upqvw"]
[ext_resource type="Script" path="res://scripts/enemy/spider/Death.gd" id="15_7lmt4"]
[ext_resource type="Script" path="res://scripts/enemy/electro_dog/Hurt.gd" id="16_m4uc5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_eryf8"]
atlas = ExtResource("2_ieb2m")
region = Rect2(0, 124, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhewe"]
atlas = ExtResource("2_ieb2m")
region = Rect2(50, 124, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ksw1"]
atlas = ExtResource("2_ieb2m")
region = Rect2(100, 124, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_6bef1"]
atlas = ExtResource("2_ieb2m")
region = Rect2(150, 124, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqqp1"]
atlas = ExtResource("2_ieb2m")
region = Rect2(200, 124, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_1m7dq"]
atlas = ExtResource("2_ieb2m")
region = Rect2(250, 124, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_ba0ki"]
atlas = ExtResource("2_ieb2m")
region = Rect2(300, 124, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7dmv"]
atlas = ExtResource("2_ieb2m")
region = Rect2(350, 124, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_55snk"]
atlas = ExtResource("2_ieb2m")
region = Rect2(400, 124, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ptjn"]
atlas = ExtResource("2_ieb2m")
region = Rect2(450, 124, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_2i0gd"]
atlas = ExtResource("2_ieb2m")
region = Rect2(0, 186, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrctp"]
atlas = ExtResource("2_ieb2m")
region = Rect2(50, 186, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_jt81d"]
atlas = ExtResource("2_ieb2m")
region = Rect2(100, 186, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksrya"]
atlas = ExtResource("2_ieb2m")
region = Rect2(150, 186, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_2srux"]
atlas = ExtResource("2_ieb2m")
region = Rect2(200, 186, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4l5s"]
atlas = ExtResource("2_ieb2m")
region = Rect2(250, 186, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnv4x"]
atlas = ExtResource("2_ieb2m")
region = Rect2(300, 186, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_fb83d"]
atlas = ExtResource("2_ieb2m")
region = Rect2(350, 186, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nlnt"]
atlas = ExtResource("2_ieb2m")
region = Rect2(400, 186, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_5cj4k"]
atlas = ExtResource("2_ieb2m")
region = Rect2(0, 155, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_trvvy"]
atlas = ExtResource("2_ieb2m")
region = Rect2(50, 155, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_orc4d"]
atlas = ExtResource("2_ieb2m")
region = Rect2(0, 0, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_aauek"]
atlas = ExtResource("2_ieb2m")
region = Rect2(50, 0, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdtow"]
atlas = ExtResource("2_ieb2m")
region = Rect2(100, 0, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2va7"]
atlas = ExtResource("2_ieb2m")
region = Rect2(150, 0, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_0mv5o"]
atlas = ExtResource("2_ieb2m")
region = Rect2(200, 0, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_12gkg"]
atlas = ExtResource("2_ieb2m")
region = Rect2(250, 0, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_rehg3"]
atlas = ExtResource("2_ieb2m")
region = Rect2(0, 31, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_pky1o"]
atlas = ExtResource("2_ieb2m")
region = Rect2(50, 31, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_b16qq"]
atlas = ExtResource("2_ieb2m")
region = Rect2(100, 31, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4l6a"]
atlas = ExtResource("2_ieb2m")
region = Rect2(150, 31, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xulc"]
atlas = ExtResource("2_ieb2m")
region = Rect2(200, 31, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_kttdf"]
atlas = ExtResource("2_ieb2m")
region = Rect2(250, 31, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_gq38c"]
atlas = ExtResource("2_ieb2m")
region = Rect2(0, 62, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_43o3b"]
atlas = ExtResource("2_ieb2m")
region = Rect2(50, 62, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_jx062"]
atlas = ExtResource("2_ieb2m")
region = Rect2(100, 62, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_isegb"]
atlas = ExtResource("2_ieb2m")
region = Rect2(150, 62, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4gbd"]
atlas = ExtResource("2_ieb2m")
region = Rect2(200, 62, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6ncx"]
atlas = ExtResource("2_ieb2m")
region = Rect2(250, 62, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_7r5ua"]
atlas = ExtResource("2_ieb2m")
region = Rect2(0, 93, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmgcn"]
atlas = ExtResource("2_ieb2m")
region = Rect2(50, 93, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_4p6ur"]
atlas = ExtResource("2_ieb2m")
region = Rect2(100, 93, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ob3l"]
atlas = ExtResource("2_ieb2m")
region = Rect2(150, 93, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_i65vs"]
atlas = ExtResource("2_ieb2m")
region = Rect2(200, 93, 50, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_5k04n"]
atlas = ExtResource("2_ieb2m")
region = Rect2(250, 93, 50, 31)

[sub_resource type="SpriteFrames" id="SpriteFrames_8ksc0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eryf8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhewe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ksw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6bef1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqqp1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1m7dq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ba0ki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7dmv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55snk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ptjn")
}],
"loop": false,
"name": &"attack_side",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2i0gd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrctp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jt81d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksrya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2srux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4l5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnv4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fb83d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nlnt")
}],
"loop": false,
"name": &"death",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5cj4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trvvy")
}],
"loop": false,
"name": &"hit_side",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_orc4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aauek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdtow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2va7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0mv5o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12gkg")
}],
"loop": true,
"name": &"idle_side",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rehg3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pky1o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b16qq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4l6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xulc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kttdf")
}],
"loop": true,
"name": &"run_down",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gq38c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_43o3b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jx062")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_isegb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4gbd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6ncx")
}],
"loop": true,
"name": &"run_side",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7r5ua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmgcn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4p6ur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ob3l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i65vs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5k04n")
}],
"loop": true,
"name": &"run_up",
"speed": 15.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_olm2f"]
radius = 20.0
height = 40.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vd6be"]
radius = 24.0
height = 112.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_15fyx"]
radius = 32.0
height = 128.0

[node name="ElectroDog" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 2
collision_mask = 0
script = ExtResource("1_oyqan")
maxHealth = 30

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
y_sort_enabled = true
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_8ksc0")
animation = &"attack_side"

[node name="Shadow" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Shadow"]
modulate = Color(1, 1, 1, 0.313726)
position = Vector2(-6, -7)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_8qpbs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = -1
shape = SubResource("CapsuleShape2D_olm2f")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
z_index = -1
position = Vector2(0, 16)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_vd6be")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="HurtboxComponent" parent="." instance=ExtResource("8_ixfwi")]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
z_index = -1
shape = SubResource("CapsuleShape2D_olm2f")
debug_color = Color(0.967424, 0, 0.474342, 0.42)

[node name="HitboxComponent" parent="." instance=ExtResource("9_lk1lc")]
collision_layer = 2
collision_mask = 0
damage = 25

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
z_index = -1
position = Vector2(0, 16)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_15fyx")
disabled = true
debug_color = Color(0.638397, 0.523081, 0.143036, 0.42)

[node name="HealthComponentNew" type="Node" parent="."]
script = ExtResource("11_3hh0j")
enity_max_health = 20
health = 20

[node name="EnemyStateMachine" type="Node2D" parent="."]
script = ExtResource("12_32cr5")

[node name="Follow" type="Node2D" parent="EnemyStateMachine"]
script = ExtResource("13_kysns")

[node name="Attack" type="Node2D" parent="EnemyStateMachine"]
script = ExtResource("14_upqvw")

[node name="Death" type="Node2D" parent="EnemyStateMachine"]
script = ExtResource("15_7lmt4")

[node name="Hurt" type="Node2D" parent="EnemyStateMachine"]
script = ExtResource("16_m4uc5")

[connection signal="body_entered" from="PlayerDetection" to="EnemyStateMachine/Follow" method="_on_player_detection_body_entered"]
